--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
                 </div>
 
                 <h3>Key Irregular Commands (Tú)</h3>
-                <p>Memorize these short forms (Vin Diesel has ten weapons):</p>
+                <p>Memorize these short forms:</p>
                 <table>
                     <tr><th>Infinitive</th><th>Command (Tú)</th></tr>
                     <tr><td>Venir</td><td><strong>Ven</strong></td></tr>
